--- a/tab/componet/gradio_calendar/templates/example/style.css
+++ b/tab/componet/gradio_calendar/templates/example/style.css
@@ -1,1 +1,3 @@
-.gallery.svelte-1gecy8w{padding:var(--size-1) var(--size-2)}
+.gallery.svelte-1gecy8w {
+    padding: var(--size-1) var(--size-2)
+}
